- Previous implementation had limitation of producing query plans only for SELECT queries. It was changed so query plan can work for every type of query.
- Query plan executions are wrapped in transaction so they don't change database state.
Thanks to Jaroslaw Jarmolowicz for the patch


Bug fixes:

#1161 Sorting Aliases creates duplicate entries in the tree view
   After sorting Aliases in the view without tree, there were duplicate Alias entries in the tree view.
   Note: If your Aliases got duplicated this way you may delete the SQLAliases23_treeStructure.xml file in your SQuirreL user dir.
         This way Aliases will be unique again but tree folder structure gets lost.


#1193 Wrong command for MySQL when renaming a column.
  The problem was a wrong preselection of the dialect for MySql5 DBs.

Hibernate Plugin: In menu File --> Global Preferences --> Tab Hibernate --> The "Details..." button in the lower part of the panel used to break with a NullPointerException
  when a directory of the Hibernate class path did not exist.

#1188 Help tree links don't work.

#1183 Empty Contents Tab in SQuirreL when Column-Names contain dashes.
  This was because double quotes were missing around column names

SQuirreL once and again hangs for some seconds on Windows.
  With help of the new detectEDT-feature it was possible to track the problem back to a JDK problem: https://bugs.openjdk.java.net/browse/JDK-6477756
  A workaround is to use the JVM parameter -Dsun.awt.nopixfmt=true. This parameter was introduced to the start batches we ship.
  People who experience the problem and use their own start batches should set the parameter manually.

#1177 Export results to xls fails for large exports that contain DATE columns
  Thanks to Neville Rowe for the fix.

Tool bar of SQL Worksheet was doubled any time it was moved from between different frames.

#1174 PostgreSQL: create table script: wrong data type numeric

#618 SQLParam plugin asks for commented variable.