@@ -45,7 +45,7 @@ public class DBDiffPluginSessionCallback implements PluginSessionCallback
 
 	public void objectTreeInternalFrameOpened(ObjectTreeInternalFrame objectTreeInternalFrame, ISession session)
 	{
-		_plugin.addMenuItemsToContextMenu(session);
+		_plugin.addMenuItemsToContextMenu(objectTreeInternalFrame.getObjectTreeAPI());
 	}
 
 }
