@@ -63,6 +63,10 @@ Thanks to Jaroslaw Jarmolowicz for the patch
 
 Bug fixes:
 
+DBDiff Plugin: Loading of the DBDiff Object tree menus failed when an Object tree window was opened:
+   java.lang.IllegalStateException: ObjectTreeApi can only be provided for SessionInternalFrame or ObjectTreeInternalFrame
+   at net.sourceforge.squirrel_sql.client.session.Session.getObjectTreeAPIOfActiveSessionWindow(Session.java:962)
+
 #1161 Sorting Aliases creates duplicate entries in the tree view
    After sorting Aliases in the view without tree, there were duplicate Alias entries in the tree view.
    Note: If your Aliases got duplicated this way you may delete the SQLAliases23_treeStructure.xml file in your SQuirreL user dir.
